# kinect

./: CMakeLists.txt  README.md  SimplexMesh.h  SimplexMesh.hxx  build_simplex_mesh.cxx  obj_url.txt  sphere.stl
